kubernetes/fractals-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fractals-website
  labels:
    app: fractals-website
spec:
  selector:
    matchLabels:
      app: fractals-website
  template:
    metadata:
      labels:
        app: fractals-website
    spec:
      containers:
      - name: fractals-website
        image: alexandru4278/fractals-website:v1.0.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
