kubernetes/fractals-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fractals-website-service
spec:
  type: NodePort
  selector:
    app: fractals-website
  ports:
    - port: 80
      targetPort: 80
