kubernetes/fractals-host-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: fractals-host-ingress.yaml
  namespace: default 
spec: 
  rules: 
  - host: fractals.com 
    http: 
      paths: 
      - backend: 
          service: 
            name: webserver-blue-svc 
            port: 
              number: 80 
        path: / 
        pathType: ImplementationSpecific 
  - host: green.example.com 
    http: 
      paths: 
      - backend: 
          service: 
            name: webserver-green-svc 
            port: 
              number: 80 
        path: / 
        pathType: ImplementationSpecific
